   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.44
 ============

 Released on 

 New features and improvements:

   - TVA: new module for TVA operations management.

 Bug fixes:

   - 

 Other changes:

   - ofaApplication: new 'menu-definition' signal.

-----------------------------------------------------------------------
 Version 0.43
 ============

 Released on 2015-12-19.

 New features and improvements:

   - Reconciliation: let the user select displayed columns (todo #887).
   - Settlement: let the user select displayed columns.
   - ofaDossierNew: no more propose to open properties right after dossier creation.
   - ofaDossierNew: keep dossier name to embed squate brackets (todo #936).
   - ofaMySQLEditor: check autorized character set in database name (todo #470).
   - Database creation: force utf8 character set (todo #928).
   - Restore: close the assistant before opening the dossier (todo #927).

 Bug fixes:

   - GuidedInput: fix the width of entries (todo #868).
   - Restore: keep the password when opening the dossier (todo #926).

 Other changes:

   The major change of this version is the replacement of a global
   ofaIDbms interface, with a lighter ofaIDBProvider one, and the
   definition of an ecosystem of companion interfaces (ofaIDBConnect,
   ofaIDBEditor, ofaIDBMeta and ofaIDBPeriod).

   As a consequence, ofaIDbms interface and ofaDbms class are marked
   obsolete and removed.

   - myISettings: new interface.
   - Upgrade DBMS to v27:
     - boolean values are set as Y/N.
     - DOS_STATUS is renamed as DOS_CURRENT (todo #904).
     - DOS_SIRET: new column (todo #817).
     - RAT_VAL_BEG is renamed as RAT_VAL_BEGIN (todo #819).
     - OTE_xxx_LOCKED are changed to CHAR(1).
     - Force default database charset to utf8.
   - ofa_application_get_file_dir(): new method.