@@ -30,6 +30,7 @@ api_include_HEADERS = \
 	ofa-iabout.h										\
 	ofa-idataset.h										\
 	ofa-idbconnect.h									\
+	ofa-idbcustomer.h									\
 	ofa-idbeditor.h										\
 	ofa-idbmeta.h										\
 	ofa-idbmeta-def.h									\
