@@ -31,6 +31,7 @@
  Other changes:
 
    - ofaApplication: new 'menu-definition' signal.
+   - ofaIDBCustomer: new interface.
 
 -----------------------------------------------------------------------
  Version 0.43
